# tiny-graphrag

./: .gitignore  LICENSE  README.md  build.py  chunk.py  chunking.py  communities.py  config.py  connect_db.sh  custom_entity.py  db.py  docker-compose.yml  example.py  extract.py  kg.py  line_count.sh  prompts.py  pyproject.toml  query.py  rel_types.py  search.py  visualize.py
data/: Barack_Obama.txt
src/tiny_graphrag/: __init__.py  build.py  chunking.py  communities.py  config.py  db.py  dis.py  entity_types.py  example.py  extract.py  graph.py  main.py  prompts.py  query.py  rel_types.py  search.py  visualize.py
